--- a/roles/03-build-image/files/prometheus-jmx-config.yml
+++ b/roles/03-build-image/files/prometheus-jmx-config.yml
@@ -1,5 +1,5 @@
 ---
-hostPort: 192.168.56.88:8080
+#hostPort: 192.168.56.88:8080
 ssl: false
 lowercaseOutputName: false
 lowercaseOutputLabelNames: false
