--- a/roles/01-download-latest-artifact/vars/main.yml
+++ b/roles/01-download-latest-artifact/vars/main.yml
@@ -2,4 +2,5 @@
 # vars file for roles/01-download-latest-artifact
 base_dir: /home/sarbajit/.jenkins/workspace
 project_name: ConferenceRoomAppDeploy_S
-sub_dir: roles/03-build-image/files
+query_dir: roles/01-download-latest-artifact/files
+dl_dir: roles/03-build-image/files
